<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph" app:startDestination="@id/taskLanding">
    <fragment
            android:id="@+id/taskLanding" android:name="com.learnandroid.taskorganizer20.ui.TaskLandingFragment"
            android:label="@string/task_organizer" tools:layout="@layout/fragment_task_landing">
        <action
                android:id="@+id/action_taskLanding_to_taskDetail" app:destination="@id/taskDetail"/>
        <action
                android:id="@+id/action_taskLanding_to_taskEditor" app:destination="@id/taskEditor"/>
    </fragment>
    <fragment
            android:id="@+id/taskDetail" android:name="com.learnandroid.taskorganizer20.ui.TaskDetailFragment"
            android:label="@string/task_detail" tools:layout="@layout/fragment_task_detail">
        <argument
                android:name="task_id" app:argType="integer" android:defaultValue="-1"/>
        <action android:id="@+id/action_taskDetail_to_taskEditor" app:destination="@id/taskEditor"/>
    </fragment>
    <fragment
            android:id="@+id/taskEditor" android:name="com.learnandroid.taskorganizer20.ui.TaskEditorFragment"
            android:label="@string/task_editor" tools:layout="@layout/fragment_task_editor">
        <argument
                android:name="task_id" app:argType="integer" android:defaultValue="-1"/>
        <action android:id="@+id/action_taskEditor_to_taskLanding" app:destination="@id/taskLanding"/>
    </fragment>
</navigation>




